--- a/src/components/SiteContainer/theme.module.scss
+++ b/src/components/SiteContainer/theme.module.scss
@@ -38,7 +38,8 @@
     opacity: 90%;
   }
 
-  > * {
+  & > * {
+    position: relative;
     z-index: 2;
   }
 }
